# TaskbarBeGone

./: .gitmodules  CMakeLists.txt  LICENSE.txt  NSIS.definitions.nsh.in  README.md  TaskbarBeGone.sln  installer.nsi
.github/workflows/: cmake.yml
Assets/: icon.rc
TaskbarBeGone Background Task/: Class.cpp  Class.h  Class.idl  TaskbarBeGone Background Task.vcxproj  TaskbarBeGone Background Task.vcxproj.filters  readme.txt
TaskbarBeGone Win32 Api/: TaskbarBeGone Win32 Api.vcxproj  dllmain.cpp  pch.h
TaskbarBeGone/TaskbarBeGone/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TaskbarBeGone.csproj  app.manifest
TaskbarBeGone/TaskbarBeGone (Package)/: Package.appxmanifest  TaskbarBeGone (Package).wapproj
src/: EntryPoint.cpp  TaskbarBeGone.cpp  TaskbarBeGone.h
